rudimentary finish of fourth view

--- a/RandomFeatures/RandomFeatures/Base.lproj/Main.storyboard
+++ b/RandomFeatures/RandomFeatures/Base.lproj/Main.storyboard
@@ -26,16 +26,16 @@
                                     <action selector="sliderValueChanged:" destination="le6-h1-Idt" eventType="valueChanged" id="cGv-TE-gI9"/>
                                 </connections>
                             </slider>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fAl-PD-x2o">
-                                <rect key="frame" x="129" y="134" width="63" height="41"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="L" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fAl-PD-x2o">
+                                <rect key="frame" x="108" y="104" width="105" height="84"/>
                                 <animations/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <animations/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.27127164819999999" green="0.79148275589999995" blue="0.79304887820000003" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item" id="Cx0-7X-uP5"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
